--- a/style.css
+++ b/style.css
@@ -56,9 +56,9 @@ header .sidebar {
 }
 
 header .sidebar .logo {
-    width: 150px;
-    padding-left: 40px;
-    padding-top: 10px;
+    width: 130px;
+    height: auto;
+    padding-left: 25px;
     margin: auto 0;
 }
 
@@ -116,7 +116,15 @@ footer .section1 {
 }
 
 footer .section1 .logo {
-    width: 150px;
+    width: 130px;
+    height: auto;
+    margin: 0 auto;
+}
+
+footer .section1 .logo span {
+    text-align: center;
+    display: block;
+    font-size: 1.2em;
 }
 
 .blocky {
